Fix spacing issues

--- a/src/components/overview/Overview.css
+++ b/src/components/overview/Overview.css
@@ -25,6 +25,6 @@
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-  justify-content: flex-end;
+  justify-content: space-evenly;
   align-items: left;
 }
